Fix GPU environment setup and NumPy compatibility
✅ WORKING: PyTorch + CUDA (RTX 2060 detected)
✅ WORKING: PyTorch Geometric
✅ WORKING: Virtual environment integration
✅ FIXED: NumPy 2.x compatibility issues with RDKit

Changes:
- Update setup script to use existing venv folder
- Fix NumPy version constraint (numpy<2.0) for RDKit compatibility
- Add graceful error handling for RDKit imports
- Create activation scripts for easy setup
- Add comprehensive test script for verification
- GPU memory optimization confirmed working

Ready for GPU-enhanced training with 6GB VRAM limit!

--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -1,22 +1,20 @@
 # GPU-Enhanced Solution Requirements
 # Optimized for CUDA 11.8 and ≤6 GB VRAM
 
-# Core ML frameworks
-torch==2.2.2+cu118
-torch-geometric==2.5.3
-torch-scatter==2.1.2+cu118
-torch-sparse==0.6.18+cu118
+# Core ML frameworks (PyTorch installed separately with CUDA)
+# torch torchvision torchaudio (handled by setup script)
+torch-geometric
 
 # Chemistry and molecular processing
-rdkit-pypi==2023.9.5
+rdkit-pypi>=2022.9.5
 
 # Data processing and analysis
 pandas>=2.0.0
-numpy>=1.24.0
+numpy>=1.24.0,<2.0.0
 scikit-learn>=1.2.0
 
 # Ensemble methods
-lightgbm==4.3.0
+lightgbm>=3.3.0
 
 # Utilities
 tqdm>=4.65.0
