--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,10 @@ dependencies = [
     "hydra-core>=1.3.0",
     "wandb>=0.15.0",
     "tensorboard>=2.13.0",
+    "lightgbm>=4.0.0",
+    "xgboost>=2.0.0",
+    "catboost>=1.2.0",
+    "optuna>=3.3.0",
 ]
 
 [project.optional-dependencies]
