--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,14 @@ scikit-learn>=1.2.0
 matplotlib>=3.7.0
 tqdm>=4.65.0
 
+# Tree ensemble models
+lightgbm>=4.0.0
+xgboost>=2.0.0
+catboost>=1.2.0
+
+# Hyperparameter optimization
+optuna>=3.3.0
+
 # Development dependencies
 pytest>=7.3.1
 black>=23.3.0
