--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,48 @@
 # Core dependencies
-torch>=2.0.0
-torch-geometric>=2.3.0
+torch>=2.0.0,<3.0.0
+torch-geometric>=2.3.0,<3.0.0
 rdkit>=2023.3.1
-pandas>=2.0.0
-numpy>=1.24.0
-scikit-learn>=1.2.0
-matplotlib>=3.7.0
-tqdm>=4.65.0
+pandas>=2.0.0,<3.0.0
+numpy>=1.24.0,<2.0.0
+scikit-learn>=1.2.0,<2.0.0
+matplotlib>=3.7.0,<4.0.0
+tqdm>=4.65.0,<5.0.0
 
 # Tree ensemble models
-lightgbm>=4.0.0
-xgboost>=2.0.0
-catboost>=1.2.0
+lightgbm>=4.0.0,<5.0.0
+xgboost>=2.0.0,<3.0.0
+catboost>=1.2.0,<2.0.0
 
 # Hyperparameter optimization
-optuna>=3.3.0
+optuna>=3.3.0,<4.0.0
+
+# Logging and configuration
+loguru>=0.7.0,<1.0.0
+omegaconf>=2.3.0,<3.0.0
+hydra-core>=1.3.0,<2.0.0
+
+# Path and file handling
+pathlib2>=2.3.7; python_version<"3.4"
 
 # Development dependencies
-pytest>=7.3.1
-black>=23.3.0
-isort>=5.12.0
-flake8>=6.0.0
-mypy>=1.3.0
-pre-commit>=3.3.1
+pytest>=7.3.1,<8.0.0
+black>=23.3.0,<24.0.0
+isort>=5.12.0,<6.0.0
+flake8>=6.0.0,<7.0.0
+mypy>=1.3.0,<2.0.0
+pre-commit>=3.3.1,<4.0.0
+
+# Documentation
+sphinx>=6.0.0,<7.0.0
+sphinx-rtd-theme>=1.2.0,<2.0.0
+
+# Testing utilities
+pytest-cov>=4.0.0,<5.0.0
+pytest-mock>=3.10.0,<4.0.0
+
+# Performance monitoring
+psutil>=5.9.0,<6.0.0
+memory-profiler>=0.60.0,<1.0.0
+
+# Data validation
+pydantic>=2.0.0,<3.0.0
